[tool.poetry]
name = "snowfake-db"
version = "0.1.4"
description = "An easy way to mock Snowflake connections in Python!"
authors = ["Joe Kaufeld <jkaufeld@spoton.com>"]
readme = "README.md"
packages = [{include = "snowfake_db"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-annotations = "^2.9.1"
flake8-black = "^0.3.6"
isort = "^5.11.4"
seed-isort-config = "^2.2.0"
pytest = "^7.2.0"
pdbpp = "^0.10.3"

[tool.poetry.group.docs.dependencies]
mkdocs = {version = "^1.4.2"}
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-material = {version = "^8.5.11"}
mkdocs-minify-plugin = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = "True"

[tool.seed-isort-config]
known_third_party = ["pytest"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py"
