[tool.poetry]
name = "asbestos-snow"
version = "1.1.0"
description = "An easy way to mock Snowflake connections in Python!"
authors = ["Joe Kaufeld <jkaufeld@spoton.com>", "SpotOn <opensource@spoton.com>"]
readme = "README.md"
packages = [{include = "asbestos"}]
repository = "https://github.com/spotoninc/asbestos"
documentation = "https://spotoninc.github.io/asbestos"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
seed-isort-config = "^2.2.0"
pytest = "^7.2.0"
pdbpp = "^0.10.3"
ruff = "^0.0.249"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = "True"

[tool.seed-isort-config]
known_third_party = ["pytest"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py"

[tool.ruff]
exclude = [
    ".git",
    ".venv",
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN401",
]
line-length = 90
select = [
    "ANN",
    "C9",
    "E",
    "F",
    "W",
]

[tool.ruff.mccabe]
max-complexity = 8
