[tool.poetry]
name = "asbestos-snow"
version = "?????"  # this will be replaced in the CI pipeline
packages = [{include = "empty"}]
description = "asbestos-snow has moved to asbestos: https://pypi.org/project/asbestos/"
authors = ["Joe Kaufeld <jkaufeld@spoton.com>", "SpotOn <opensource@spoton.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asbestos = "?????"  # this will be replaced in the CI pipeline

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
